--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,11 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-        destroy-environment
+      - run:
+          name: Add front-end ip to ansible inventory
+          command: | 
+            destroy-environment:
+              workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 #   configure-infrastructure:
 #     docker:
