--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,6 @@ jobs:
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli:2.3.0
-      - image: git-cli/git:2.23.0
     steps:
       - checkout
       - run: yum -y install tar gzip
@@ -317,7 +316,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [test-feature-branch]
+              only: [master]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
       # - run-migrations:
