--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,10 +140,11 @@ jobs:
     docker:
       - image: amazon/aws-cli
     steps:
-      - add_ssh_keys:
-            fingerprints:
-              - "e2:4f:ff:1a:94:20:88:e0:08:e8:60:bc:24:41:4c:c0"
       - checkout
+      - run:          
+          name: SSH or Git CLI client                 
+          command: |            
+              yum install -y openssh-client git
       - restore_cache:
           keys: [infrastructure-deploy]
       - run:
