--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,7 +149,10 @@ jobs:
           command: |
               yum install -y git
       - checkout
-      
+      - run:
+          name: install tar and gzip
+          command: |
+              yum install -y tar gzip
       - run:
           name: Ensure back-end infrastructure exists
           command: | 
