--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,7 +202,7 @@ jobs:
           command: |
             yum install -y tar gzip
       # Add ssh keys with fingerprint
-      - add_ssh_key:
+      - add_ssh_keys:
           fingerprints:[71:ea:ee:43:3a:79:c3:ce:57:55:8d:84:26:c8:6d:eb]
       # attach workspace
       - attach_workspace:
