--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,24 +14,23 @@ commands:
             aws cloudformation wait stack-delete-complete --stack-name ${CIRCLE_WORKFLOW_ID:0:7}-frontend
           
 
-#   revert-migrations:
-#     description: Revert the last migration if successfully run in the current workflow.
-#     parameters:
-#       # Add parameter here     
-#     steps:
-#       - run:
-#           name: Revert migrations
-#           # Add when this will run
-#           command: |
-#             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-#             SUCCESS = 1
-#             if(( $SUCCESS==1 )); 
-#             then
-#             #  cd ~/project/backend
-#             #  npm install
-#             #  Add revert code here. You can find this in the Getting Started section.
-#               exit 1
-#             fi
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      # Add parameter here     
+    steps:
+      - run:
+          name: Revert migrations
+          # Add when this will run
+          command: |
+            SUCCESS = 1
+            if(( $SUCCESS==1 )); 
+            then
+              cd ~/project/backend
+              npm install
+              Add revert code here. You can find this in the Getting Started section.
+              exit 1
+            fi
             
 jobs:
   build-frontend:
@@ -221,7 +220,7 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook -i .circleci/files/inventory .circleci/files/configure-server.yml
-      # Here's where you will add some code to rollback on failure      
+      - destroy-environment   
 
   run-migrations:
     docker:
@@ -241,8 +240,8 @@ jobs:
             then
               curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
             fi
-
-     # Here's where you will add some code to rollback on failure      
+      - destroy-environment
+      - revert-migrations
 
 #   deploy-frontend:
 #     docker:
