--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,7 +211,8 @@ jobs:
           command: |
             yum install -y python
             yum install -y python-pip
-            apk add --update ansible
+            apt update
+            apt install ansible
             yum install -y nodejs
             yum install -y npm
             yum install -y pm2
