--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,8 +210,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install -y python
-            yum install -y python-pip
+            yum install -y python:3.7.3 python-pip python3-pip
             pip install ansible
 
       - run:
