--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,7 +230,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrate > migrations_dump.txt
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
